RESOLVED FIXED151147
Handle custom menu items in WebKit instead of WebCore on Windows
https://bugs.webkit.org/show_bug.cgi?id=151147
Summary Handle custom menu items in WebKit instead of WebCore on Windows
Anders Carlsson
Reported 2015-11-11 12:00:45 PST
Handle custom menu items in WebKit instead of WebCore on Windows
Attachments
Patch (3.57 KB, patch)
2015-11-11 12:02 PST, Anders Carlsson
no flags
Patch (3.56 KB, patch)
2015-11-11 12:35 PST, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-11-11 12:02:02 PST
Anders Carlsson
Comment 2 2015-11-11 12:35:59 PST
Anders Carlsson
Comment 3 2015-11-11 13:48:03 PST
Note You need to log in before you can comment on or make changes to this bug.