Handle custom menu items in WebKit instead of WebCore on Windows https://bugs.webkit.org/show_bug.cgi?id=151147

Reviewed by Tim Horton.

* WebCoreSupport/WebContextMenuClient.cpp:
(WebContextMenuClient::contextMenuItemSelected):
* WebView.cpp:
(WebView::onMenuCommand):

Canonical link: https://commits.webkit.org/169341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192322 268f45cc-cd09-0410-ab3c-d52691b4dbfc