Source/WebKit/win/WebView.cpp
@@ -1625,6 +1625,16 @@ void WebView::onMenuCommand(WPARAM wParam, LPARAM lParam)
     String title(buffer.get(), menuItemInfo.cch);
     ContextMenuAction action = static_cast<ContextMenuAction>(menuItemInfo.wID);
 
+    if (action >= ContextMenuItemBaseApplicationTag) {
+        if (m_uiDelegate) {
+            COMPtr<WebElementPropertyBag> propertyBag;
+            propertyBag.adoptRef(WebElementPropertyBag::createInstance(m_page->contextMenuController().hitTestResult()));
+
+            m_uiDelegate->contextMenuItemSelected(this, &menuItemInfo, propertyBag.get());
+        }
+        return;
+    }
+
     ContextMenuItem item(ActionType, action, title, true, false);
     m_page->contextMenuController().contextMenuItemSelected(&item);
 }
